<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/question_number"
        android:id="@+id/questionNumber"
        android:layout_gravity="center"
        android:singleLine="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textColor="#708bff"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionText"
        android:layout_gravity="center"
        android:text="@string/question_text"
        android:textAlignment="gravity"
        android:gravity="left"
        android:layout_below="@+id/questionNumber"
        android:layout_alignParentLeft="true"
        android:textColor="#ffffff"
        android:height="128dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/questionText">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_a"
            android:id="@+id/buttonResponse_a"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="32dp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_b"
            android:id="@+id/buttonResponse_b"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_c"
            android:id="@+id/buttonResponse_c"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_d"
            android:id="@+id/buttonResponse_d"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="32dp"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="fill_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonHintText"
                    android:id="@+id/buttonHint"

                    android:textColor="#ffffff"
                    android:height="64dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="true"
                    android:width="128dp"
                    android:layout_alignParentBottom="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelScoreText"
                    android:id="@+id/textViewScoreLabel"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_alignTop="@+id/buttonHint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/textViewScoreValue"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:textSize="24sp"
                    android:layout_alignBottom="@+id/buttonHint" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonSkipText"
                    android:id="@+id/buttonSkip"

                    android:textColor="#ffffff"
                    android:height="64dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentRight="true"
                    android:width="128dp"
                    android:layout_alignTop="@+id/buttonHint" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>